--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,11 +5,12 @@
   "description": "my Notes Backend Server",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts"
-  },
+  "dev": "tsx watch src/index.ts",
+  "build": "tsc",
+  "start": "node dist/index.js",
+  "postinstall": "cd ../frontend && npm install && npm run build"
+}
+,
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
