--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "backend/dist/index.js",
   "type": "module",
   "scripts": {
-    "install": "cd frontend && npm install && cd ../backend && npm install",
-    "build": "cd frontend && npm run build",
+    "install": "cd Frontend && npm install && cd ../backend && npm install",
+    "build": "cd Frontend && npm run build",
     "start": "cd backend && node dist/index.js",
-    "dev": "concurrently \"cd frontend && npm run dev\" \"cd backend && npm run dev\""
+    "dev": "concurrently \"cd Frontend && npm run dev\" \"cd backend && npm run dev\""
   },
   "repository": {
     "type": "git",
