--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,8 +7,7 @@
   "scripts": {
   "dev": "tsx watch src/index.ts",
   "build": "tsc",
-  "start": "node dist/index.js",
-  "postinstall": "cd ../frontend && npm install && npm run build"
+  "start": "node dist/index.js"
 }
 ,
   "dependencies": {
