--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "hd-notes-client",
+  "name": "my_notes",
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "client": "vite",
-    "server": "cd ../backend && npm run dev",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "concurrently \"npm run client\" \"npm run server\"",
+  "client": "vite",
+  "server": "cd ../end && npm run dev",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+},
+
   "dependencies": {
     "axios": "^1.6.0",
     "framer-motion": "^12.23.12",
@@ -28,7 +29,6 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
-    "concurrently": "^9.2.1",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
