--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "install": "cd Frontend && npm install && cd ../Backend && npm install",
-    "build": "cd Frontend && npm install --include=dev && npm run build && cd ../Backend && npm install && npm run build",
-    "start": "cd Backend && node dist/index.js",
+    "build": "cd Frontend && npm run build && cd ../Backend && npm run build",
+    "start": "node Backend/dist/index.js",
     "dev": "concurrently \"cd Frontend && npm run dev\" \"cd Backend && npm run dev\""
   },
   "repository": {
