--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "Backend/dist/index.js",
   "type": "module",
   "scripts": {
-    "install": "cd Frontend && npm install && cd ../Backend && npm install",
-    "build": "cd Frontend && npm run build && cd ../Backend && npm run build",
+    "install": "cd Frontend && npm install --include=dev && cd ../Backend && npm install",
+    "build": "cd Frontend && npm install --include=dev && npm run build && cd ../Backend && npm install && npm run build",
     "start": "node Backend/dist/index.js",
     "dev": "concurrently \"cd Frontend && npm run dev\" \"cd Backend && npm run dev\""
   },
