--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "Backend/dist/index.js",
   "type": "module",
   "scripts": {
-    "install": "cd Frontend && npm install --include=dev && cd ../Backend && npm install",
-    "build": "cd Frontend && npm install --include=dev && npm run build && cd ../Backend && npm install && npm run build",
-    "start": "node Backend/dist/index.js",
-    "dev": "concurrently \"cd Frontend && npm run dev\" \"cd Backend && npm run dev\""
+    "dev": "concurrently \"cd Frontend && npm run dev\" \"cd Backend && npm run dev\"",
+    "build": "cd Frontend && npm run build && cd ../Backend && npm run build",
+    "start": "node Backend/dist/index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Israel-199/My_Note_Platform.git"
   },
-  "keywords": ["notes", "mern", "fullstack", "react", "nodejs", "express", "mongodb"],
+  "keywords": [
+    "notes",
+    "mern",
+    "fullstack",
+    "react",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
   "author": "Israel Assefa",
   "license": "ISC",
   "bugs": {
@@ -22,6 +29,7 @@
   },
   "homepage": "https://github.com/Israel-199/My_Note_Platform#readme",
   "dependencies": {
-    "concurrently": "^8.2.0"
+    "concurrently": "^8.2.0",
+    "vite": "^7.1.3"
   }
 }
