--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,8 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "note_app": "file:.."
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
