--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "vite",
-    "server": "cd ../end && npm run dev",
+    "server": "cd ../Backend && npm run dev",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -16,12 +16,10 @@
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
-    "note_app": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.18.0",
-    "vite": "^7.1.3"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
