--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,7 +18,8 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "note_app": "file:.."
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -27,7 +28,7 @@
     "@types/express": "^4.17.23",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
-    "@types/nodemailer": "^6.4.19",
+    "@types/nodemailer": "^6.4.20",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
