--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "description": "Fullstack Notes Platform (Frontend + Backend) deployed together",
   "type": "module",
-  "main": "Backend/dist/index.js",
+  "main": "index.js",
   "scripts": {
     "install-all": "npm install --prefix Backend && npm install --prefix Frontend",
-    "build": "npm run install-all && npm run build --prefix Backend && npm run build --prefix Frontend",
-    "start": "node Backend/dist/index.js",
-    "dev": "concurrently \"npm run dev --prefix Backend\" \"npm run dev --prefix Frontend\""
+    "build": "npm run install-all && npm run build --prefix Frontend && npm run build --prefix Backend",
+    "start": "npm run start --prefix Backend",
+    "dev": "concurrently \"npm run dev --prefix Backend\" \"npm start --prefix Frontend\""
   },
   "repository": {
     "type": "git",
