--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "vite": "^7.1.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
