--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "homepage": "https://github.com/Israel-199/My_Note_Platform#readme",
   "dependencies": {
     "concurrently": "^8.2.0",
-    "vite": "^7.1.9"
+  "vite": "^5.0.0",
+  "@vitejs/plugin-react": "^5.0.0"
   }
+
 }
