--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "note_app": "file:.."
   }
 }
