Prepare fullstack Render deployment

--- a/package.json
+++ b/package.json
@@ -1,38 +1,18 @@
 {
   "name": "note_app",
   "version": "1.0.0",
-  "description": "Fullstack Notes Platform (Frontend + Backend) deployed together",
+  "description": "Fullstack Notes Platform (Frontend + Backend)",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "install-all": "npm install --prefix Backend && npm install --prefix Frontend",
     "build": "npm run install-all && npm run build --prefix Frontend && npm run build --prefix Backend",
     "start": "npm run start --prefix Backend",
-    "dev": "concurrently \"npm run dev --prefix Backend\" \"npm start --prefix Frontend\""
+    "dev": "concurrently \"npm run dev --prefix Backend\" \"npm run dev --prefix Frontend\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Israel-199/My_Note_Platform.git"
-  },
-  "keywords": [
-    "notes",
-    "mern",
-    "fullstack",
-    "react",
-    "nodejs",
-    "express",
-    "mongodb"
-  ],
-  "author": "Israel Assefa",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Israel-199/My_Note_Platform/issues"
-  },
-  "homepage": "https://github.com/Israel-199/My_Note_Platform#readme",
   "dependencies": {
     "concurrently": "^8.2.0",
-  "vite": "^5.0.0",
-  "@vitejs/plugin-react": "^5.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^5.0.0"
   }
-
 }
