--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,10 +1,12 @@
 {
   "name": "my-notes-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "cd ../Frontend && npm install && npm run build"
+    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "build": "tsc && cd ../Frontend && npm install && npm run build",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,6 +19,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "nodemailer": "^6.10.1",
-    "note_app": "file:.."
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "typescript": "^5.5.3",
+    "ts-node": "^10.9.2",
+    "nodemon": "^3.1.0"
   }
 }
