--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -18,12 +18,9 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
     "exactOptionalPropertyTypes": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": false,
-    "noUncheckedIndexedAccess": false
+    "types": ["node"]      
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
