--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,18 +19,18 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
     "nodemailer": "^6.10.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "@types/node": "^24.8.1",
+    "@types/express": "^5.0.3",
+    "@types/cors": "^2.8.19",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/helmet": "^0.0.48",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^7.0.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/helmet": "^0.0.48",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.8.1",
-    "@types/nodemailer": "^7.0.2",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
