--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,21 +4,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "client": "vite",
-    "server": "cd ../Backend && npm run dev",
+    "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.18",
     "axios": "^1.6.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
-    "note_app": "file:..",
     "postcss": "^8.4.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -26,17 +21,5 @@
     "react-router-dom": "^6.18.0",
     "tailwindcss": "^3.4.1",
     "vite": "^7.1.9"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/js-cookie": "^3.0.6",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0"
   }
 }
