--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,9 +19,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
     "tailwindcss": "^3.4.1",
-    "vite": "^7.1.9"
-  },
-  "devDependencies": {
+    "vite": "^7.1.9",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6"
   }
