--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,12 +4,21 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "prebuild": "npm install", 
+    "prebuild": "npm install",
     "dev": "nodemon --watch src --exec ts-node src/index.ts",
     "build": "tsc && cd ../Frontend && npm install && npm run build",
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.8.1",
+    "@types/nodemailer": "^7.0.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -21,15 +30,7 @@
     "mongoose": "^7.8.7",
     "nodemailer": "^6.10.1",
     "path": "^0.12.7",
-    "@types/node": "^24.8.1",
-    "@types/express": "^5.0.3",
-    "@types/cors": "^2.8.19",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/helmet": "^0.0.48",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^7.0.2"
+    "resend": "^6.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
