--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.8.1",
     "@types/nodemailer": "^7.0.2",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.1",
     "path": "^0.12.7",
     "resend": "^6.2.0"
